--- a/watering.html
+++ b/watering.html
@@ -29,7 +29,7 @@ footer {background: #3d8b3d; color: white; text-align: center; padding: 20px; ma
     <a href="Calculator.html">calculator</a>
     <a href="Fertilizer.html">Fertilizer</a>
     <a href="Types of soil.html">Types of Soil</a>
-    <a href="Watering.html">Watering</a>
+    <a href="watering.html">Watering</a>
     <a href="Seasons.html">season</a>
     <a href="uploads.html">upload</a>
 </nav>
